[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.39.0", features = ["full"] }
diesel = { version = "2.2.0", features = ["postgres"] }
pq-sys = { version = "0.6", features = ["bundled"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] } 
dotenvy = "0.15"


